# atomic-lang

./: .gitignore  Atomic语言设计文档7.txt  Cargo.toml  README.md  build.rs  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/: advanced_test.at  assert_test.at  bitwise.at  char_literal.at  compound.at  const.at  contains_debug.at  contains_debug2.at  copy.at  datetime_test.at  debug_integration.at  deepseek_chat.at  destructure.at  enum.at  exhaustive.at  extension.at  external_type.at  ffi_test2.at  fizzbuzz.at  fn_ref.at  fn_type.at  fn_type2.at  for_loop.at  generic_fun.at  hello.at  http_test.at  import.at  integration_test.at  interp.at  io.at  io_test.at  is_match.at  lambda.at  lazy_drop_test.at  lazy_filter_test.at  lazylist_test.at  list.at  list.ll  list_test.at  manual_subset.at  (+101 more)
lib/: math.at  option.at  result.at
runtime/: http_helpers.c
src/: ast.rs  config.rs  error.rs  http_runtime.rs  lexer.rs  main.rs  parser.rs  typecheck.rs
src/codegen/: builtins.rs  expr.rs  for_loop.rs  jit.rs  map_set.rs  misc.rs  mod.rs  pattern.rs  runtime.rs  stmt.rs
stdlib/: http.atom  io.atom
tests/: integration.rs
