[package]
name = "atomic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atomic"
path = "src/main.rs"

[dependencies]
inkwell = { version = "0.9", features = ["llvm21-1"] }
llvm-sys = { version = "211" }
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
toml = "1.0"

[dev-dependencies]
